--- a/style.css
+++ b/style.css
@@ -35,3 +35,22 @@
     border-width: 1px 1px 0px 0;
     border-style: solid;
 }
+.calc-button-row button.ac {
+    color: #ff7665;
+}
+.calc-button-row button.opt {
+    color: #ffbc56;
+}
+
+.calc-button-row button:nth-child(4n){
+    border-right: none;
+}
+.calc-button-row button:active {
+    position: relative;
+    top: 1px;
+}
+.calc-button-row button:hover {
+    background: #3e4b5c;
+}
+
+
