--- a/style.css
+++ b/style.css
@@ -1,56 +1,108 @@
+body{
+    margin: 0;
+    padding:0;
+    line-height: 0.5;
+    background:linear-gradient(to left,#56baf0,#c3e4ee);
+    font-family: sans-serif;
+}
 
-.calc-body {
-    width: 275px;
+.calci{
+    width: 500px;
+    padding-top: 100px;
+    padding-bottom: 100;
+    position: absolute;
+    top:50%;
+    left:70%;
+    transition:0.25px;
+    transform: translate(-50%,-50%);
+    text-align: center;
+}
+#zero{
+
+height: 55;
+width: 116;
+font-size: 20;
+    font-family: sans-serif;
+    font-weight: 300;
+
+}
+
+#display{
+    
+    border:none;
+    background: white;
+    border-radius: 30px;
+    width: 245;
+    font-size: 20;
+    font-family: sans-serif;
+    font-weight: 300;
+    height: 60;
     margin: auto;
-    min-height: 400px;
-    box-shadow: 0 8px 50px -7px black;
-    background: #3A4655;
+    border:2px solid white(5, 218, 255, 0.726);
+    color: black;
+
+
+
 }
-.calc-screen {
-    padding: 1rem;
-}
-#calc-operation {
-    font-size: 1.3rem;
-    text-align: right;
-    color: #727B86;
-    padding-bottom: .5rem;
-}
-#calc-typed {
-    font-size: 2rem;
-    text-align: right;
-    color: #fff;
-}
-.calc-button-row{
-    display: table;
-}
-.calc-button-row button {
-    display: table-cell;
-    width: 25%;
-    background: #425062;
-    color: #fff;
-    height: 65px;
-    font-size: 1.3rem;
+.button{
+    width: 55;
+    height: 55;
+    padding-top: -1;
+    font-size: 20;
     border: none;
-    border-color:#3C4857;
-    border-width: 1px 1px 0px 0;
-    border-style: solid;
-}
-.calc-button-row button.ac {
-    color: #ff7665;
-}
-.calc-button-row button.opt {
-    color: #ffbc56;
-}
-
-.calc-button-row button:nth-child(4n){
-    border-right: none;
-}
-.calc-button-row button:active {
-    position: relative;
-    top: 1px;
-}
-.calc-button-row button:hover {
-    background: #3e4b5c;
+    background: white;
+    font-family: sans-serif;
+    font-weight: 300;
+    border:0;
+    border-radius: 30px;
+    margin: 1.5;
+    transition:0.25px;
+    
+    
 }
 
+h1{
+    margin-top: 300px;
+    margin-left: 100px;
+    font-family: sans-serif;
 
+    font-size:50;
+   
+    text-decoration: underline;
+
+color: white;
+text-transform: uppercase;
+font-weight: 700;}
+
+h2{
+
+    color: white;
+    margin-top: -1px;
+    font-family: sans-serif;
+    margin-left: 438px;
+}
+.operator{
+    width: 55;
+    height: 55;
+    padding-top: -1;
+    font-size: 20;
+    text-align: center;
+    color: black;
+    border: none;
+    background: white;
+    font-family: sans-serif;
+    font-weight: 500;
+    border:0;
+    border-radius: 30px;
+    margin: 1.5;
+    transition:0.25px;
+    cursor:pointer;
+    
+    
+    
+}
+
+
+.operator:hover{
+    background: #00d9ff;
+}
