--- a/style.css
+++ b/style.css
@@ -7,25 +7,25 @@ body {
     background: #3A4655;
 }
 
-.calc-screen {
+#screen {
     padding: 1rem;
 }
-#calc-operation {
+#operation {
     font-size: 1.3rem;
     text-align: right;
     color: #727B86;
     padding-bottom: .5rem;
 }
-#calc-typed {
+#typed {
     font-size: 2rem;
     text-align: right;
     color: #fff;
 }
 
-.calc-button-row{
+.button-row{
     display: table;
 }
-.calc-button-row button {
+.button-row button {
     display: table-cell;
     width: 25%;
     background: #425062;
@@ -37,20 +37,20 @@ body {
     border-width: 1px 1px 0px 0;
     border-style: solid;
 }
-.calc-button-row button.ac {
+.button-row button.ac {
     color: #ff7665;
 }
-.calc-button-row button.opt {
+.button-row button.opt {
     color: #ffbc56;
 }
 
-.calc-button-row button:nth-child(4n){
+.button-row button:nth-child(4n){
     border-right: none;
 }
-.calc-button-row button:active {
+.button-row button:active {
     position: relative;
     top: 1px;
 }
-.calc-button-row button:hover {
+.button-row button:hover {
     background: #3e4b5c;
 }
