--- a/style.css
+++ b/style.css
@@ -1,7 +1,6 @@
-
-.body {
+.calc-body {
     width: 275px;
-    margin:auto;
+    margin: auto;
     min-height: 400px;
     box-shadow: 0 8px 50px -7px black;
     background: #3A4655;
